<resources>
    <string name="app_name">pruebaFurgonapp</string>
    <string name="btn_login">Inicia sesión</string>
    <string name="btn_registro">Registrate</string>
    <string name="btn_google">Google</string>
    <string name="txt_furgonapp">Furgonapp</string>
    <string name="et_nombre">Nombre</string>
    <string name="et_correo">Correo</string>
    <string name="et_fono">Telefono</string>
    <string name="btn_volver">Volver</string>
    <string name="tituloRegistro">Nuevo usuario</string>
    <string name="tituloSelectorRegistro">¿Que tipo de usuario eres?</string>
    <string name="txtApoderado">Apoderado</string>
    <string name="txtChofer">Chofer escolar</string>
</resources>